@@ -27,6 +27,8 @@ COM_CONTENT_CONFIG_LIST_SETTINGS_DESC="These settings apply for List Layouts Opt
 COM_CONTENT_CONFIG_TEXT_FILTERS_DESC="These are the text filters that will be applied to articles submitted by users in the selected groups.<br />These filtering options give more control over the HTML your content providers submit. You can be as strict or as liberal as you require to suit your site needs. The filtering is opt-in and the default settings provide good protection against markup commonly associated with Web site attacks."
 COM_CONTENT_CONFIG_TEXT_FILTERS_LABEL="Text Filters"
 COM_CONTENT_CONFIGURATION="Article Manager Options"
+COM_CONTENT_CREATE_ARTICLE_CATEGORY_LABEL="Default category"
+COM_CONTENT_CREATE_ARTICLE_CATEGORY_DESC="If set to 'Yes', this page will only let you create articles in the category selected below."
 COM_CONTENT_DRILL_CATEGORIES_LABEL="List or Blog: after choosing the display,<br />make sure you define the Options in the desired layout."
 COM_CONTENT_DRILL_DOWN_LAYOUT_DESC="When drilling down to a category, whether to show articles in a list or blog layout."
 COM_CONTENT_DRILL_DOWN_LAYOUT_LABEL="List or Blog Layout"
