@@ -8,4 +8,21 @@
 			<![CDATA[COM_CONTENT_FORM_VIEW_DEFAULT_DESC]]>
 		</message>
 	</layout>
+	<fields name="params">
+		<fieldset name="basic">
+			<field name="enable_category" 
+				type="radio" 
+				default="0" 
+				label="COM_CONTENT_CREATE_ARTICLE_CATEGORY_LABEL" 
+				description="COM_CONTENT_CREATE_ARTICLE_CATEGORY_DESC">
+					<option value="1">JYES</option>
+					<option value="0">JNO</option>
+			</field>
+			<field name="catid" 
+				type="category" 
+				label="JGLOBAL_CHOOSE_CATEGORY_LABEL" 
+				extension="com_content" 
+				description="JGLOBAL_CHOOSE_CATEGORY_DESC" />
+		</fieldset>
+	</fields>
 </metadata>
