@@ -66,6 +66,12 @@ class ContentViewForm extends JView
 
 		$this->params	= $params;
 		$this->user		= $user;
+		
+		if ($this->params->get('enable_category') == 1) {
+			$catid = JRequest::getInt('catid');
+			$category = JCategories::getInstance('Content')->get($this->params->get('catid', 1));
+			$this->category_title = $category->title;
+		}
 
 		$this->_prepareDocument();
 		parent::display($tpl);
