@@ -32,6 +32,7 @@ $ -> Language fix or change
  + Feature [#25987] JToolBarHelper functions for Save and Create New and Save as Copy (Joseph LeBlanc).
  + Feature [#25732] Add JFormRuleOptions rule to validate type="list" parameters (Mark Dexter).
  + Feature [#25461] Mod_custom with backgroundimages (Angie Radtke).
+ + Feature [#25119] Allow preselection of categories in com_content (Peter Kneisel, Ole Bang Ottosen, Jean-Marie Simonet).
  
 03-Jun-2011 Jean-Marie Simonet
  + [#26035] *Adding the possibility for language packs to include a css file for back-end font change
